Finalize Fav Teams
